# unity-crunch

./: .gitignore  .project  BuildVS2015.bat  BuildVS2019.bat  CHANGELOG.md  CMakeLists.txt  README.md  crn.workspace  crn_linux.workspace
crnlib/: Makefile  crn_texture_comp.cpp  crnlib.2010.vcxproj  crnlib.cbp  crnlib_linux.cbp
crunch/: crunch.2010.vcxproj  crunch.cbp  crunch_linux.cbp
emscripten/: crunch_lib.cpp
inc/: crn_decomp.h
